修正day4收口